table reformatting now works

--- a/tableOut.html
+++ b/tableOut.html
@@ -8,37 +8,25 @@
 <body>
     <table border="1" cellpadding="0" cellspacing="0" class="MsoNormalTable c77">
       <thead><tr>
-        <td class="c71" valign="top" width="229">
-          <p class="Tablecellheading"><span lang="EN-GB" xml:lang="EN-GB">Test
-          name</span></p>
-        </td>
+        <th class="c71" valign="top" width="229">Test
+          name</th>
 
-        <td class="c72" valign="top" width="310">
-          <p class="Tablecellheading"><span lang="EN-GB" xml:lang="EN-GB">True
-          if</span></p>
-        </td>
+        <th class="c72" valign="top" width="310">True
+          if</th>
       </tr>
 
       </thead><tbody><tr>
-        <td class="c73" valign="top" width="229">
-          <p class="Tablecell"><span lang="EN-GB" xml:lang="EN-GB">boxLengthIsValid</span></p>
-        </td>
+        <td class="c73" valign="top" width="229">boxLengthIsValid</td>
 
-        <td class="c74" valign="top" width="310">
-          <p class="Tablecell"><span lang="EN-GB" xml:lang="EN-GB">Size of box contents
-          equals 4 bytes</span></p>
-        </td>
+        <td class="c74" valign="top" width="310">Size of box contents
+          equals 4 bytes</td>
       </tr>
 
       <tr>
-        <td class="c75" valign="top" width="229">
-          <p class="Tablecell"><span lang="EN-GB" xml:lang="EN-GB">signatureIsValid</span></p>
-        </td>
+        <td class="c75" valign="top" width="229">signatureIsValid</td>
 
-        <td class="c76" valign="top" width="310">
-          <p class="Tablecell"><span lang="EN-GB" xml:lang="EN-GB">Signature equals
-          0x0d0a870a</span></p>
-        </td>
+        <td class="c76" valign="top" width="310">Signature equals
+          0x0d0a870a</td>
       </tr>
     </tbody></table>
 </body>
